# symphony

./: .gitignore  CLAUDE.md  Makefile  README.md  WORKFLOW.md  go.mod  go.sum  pyproject.toml
.github/workflows/: release.yml
cmd/symphony/: launchctl.go  launchctl_test.go  main.go  status.go  status_test.go  status_view.go
docs/plans/: 2026-03-06-binary-distribution-and-self-update.md  2026-03-06-daemon-config-hot-reload.md  2026-03-06-j-16-global-session-cap.md  2026-03-06-j-17-menubar-status.md  2026-03-07-j-23-notifch-terminal-events.md  2026-03-07-j-24-continuation-turn-context.md  2026-03-07-j-29-linear-feedback.md  2026-03-07-j-36-linear-pr-link.md  2026-03-07-j-40-human-review-concurrency.md  2026-03-07-j-41-macos-permission-prompt.md  2026-03-07-j-46-planning-stage.md
internal/agent/: claude.go  claude_test.go  codex.go  codex_test.go  protocol.go  runner.go  runner_test.go
internal/config/: config.go  config_test.go  daemon.go  daemon_test.go  validate_helpers.go
internal/daemon/: manager.go  manager_test.go  runtime.go  runtime_test.go  updater.go  updater_test.go
internal/filewatch/: watch.go  watch_test.go
internal/menubar/: app_darwin.go  app_darwin_test.go  app_stub.go  client.go
internal/orchestrator/: capacity.go  dispatch.go  (+8 more)
scripts/: com.symphony.daemon.plist  com.symphony.menubar.plist  config.yaml  install.sh
tests/: conftest.py  test_codex_runner.py  test_config.py  test_daemon_config.py  test_daemon_manager.py  test_daemon_updater.py  test_integration.py  test_orchestrator.py  test_protocol.py  test_workflow.py  test_workspace.py
(+39 files in other folders)
